--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,19 @@
     <string name="app_name">CardSquare</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
+
     <string name="action_settings">Settings</string>
+
+    <string name="icon">アイコン</string>
+    <string name="cover_imagee">カバーイメージ</string>
+
+    <string name="nav_notification">お知らせ（パートナー申請）</string>
+    <string name="nav_my_cards">マイ・カード</string>
+    <string name="nav_square">スクエア</string>
+    <string name="nav_accounts">アカウント管理</string>
+    <string name="action_edit_card">カードの編集</string>
 </resources>
